Grace/tests/gibbs/errors/t164.grace
// ERROR = P1002
def = 8
